internal/ast/y.output

state 0
	$accept: .program $end 
	classes: .    (2)

	.  reduce 2 (src line 72)

	classes  goto 2
	program  goto 1

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  classes.    (1)
	classes:  classes.class 

	CLASS  shift 4
	.  reduce 1 (src line 64)

	class  goto 3

state 3
	classes:  classes class.    (3)

	.  reduce 3 (src line 77)


state 4
	class:  CLASS.TYPEID '(' var_formals ')' extends '{' feature_list '}' 

	TYPEID  shift 5
	.  error


state 5
	class:  CLASS TYPEID.'(' var_formals ')' extends '{' feature_list '}' 

	'('  shift 6
	.  error


state 6
	class:  CLASS TYPEID '('.var_formals ')' extends '{' feature_list '}' 
	var_formals: .    (27)

	VAR  shift 10
	.  reduce 27 (src line 263)

	var_formals  goto 7
	var_formals_nonempty  goto 8
	var_formal  goto 9

state 7
	class:  CLASS TYPEID '(' var_formals.')' extends '{' feature_list '}' 

	')'  shift 11
	.  error


state 8
	var_formals:  var_formals_nonempty.    (28)
	var_formals_nonempty:  var_formals_nonempty.',' var_formal 

	','  shift 12
	.  reduce 28 (src line 268)


state 9
	var_formals_nonempty:  var_formal.    (29)

	.  reduce 29 (src line 274)


state 10
	var_formal:  VAR.formal 

	OBJECTID  shift 14
	.  error

	formal  goto 13

state 11
	class:  CLASS TYPEID '(' var_formals ')'.extends '{' feature_list '}' 
	extends: .    (5)

	EXTENDS  shift 16
	.  reduce 5 (src line 95)

	extends  goto 15

state 12
	var_formals_nonempty:  var_formals_nonempty ','.var_formal 

	VAR  shift 10
	.  error

	var_formal  goto 17

state 13
	var_formal:  VAR formal.    (31)

	.  reduce 31 (src line 285)


state 14
	formal:  OBJECTID.':' TYPEID 

	':'  shift 18
	.  error


state 15
	class:  CLASS TYPEID '(' var_formals ')' extends.'{' feature_list '}' 

	'{'  shift 19
	.  error


state 16
	extends:  EXTENDS.TYPEID '(' actuals ')' 
	extends:  EXTENDS.NATIVE 

	NATIVE  shift 21
	TYPEID  shift 20
	.  error


state 17
	var_formals_nonempty:  var_formals_nonempty ',' var_formal.    (30)

	.  reduce 30 (src line 279)


state 18
	formal:  OBJECTID ':'.TYPEID 

	TYPEID  shift 22
	.  error


state 19
	class:  CLASS TYPEID '(' var_formals ')' extends '{'.feature_list '}' 
	feature_list: .    (8)

	.  reduce 8 (src line 125)

	feature_list  goto 23

state 20
	extends:  EXTENDS TYPEID.'(' actuals ')' 

	'('  shift 24
	.  error


state 21
	extends:  EXTENDS NATIVE.    (7)

	.  reduce 7 (src line 113)


state 22
	formal:  OBJECTID ':' TYPEID.    (36)

	.  reduce 36 (src line 314)


state 23
	class:  CLASS TYPEID '(' var_formals ')' extends '{' feature_list.'}' 
	feature_list:  feature_list.feature ';' 

	VAR  shift 31
	DEF  shift 32
	OVERRIDE  shift 30
	'{'  shift 27
	'}'  shift 25
	.  error

	feature  goto 26
	var  goto 28
	method  goto 29

state 24
	extends:  EXTENDS TYPEID '('.actuals ')' 
	actuals: .    (18)

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  reduce 18 (src line 205)

	expr  goto 35
	primary  goto 36
	actuals  goto 33
	actuals_nonempty  goto 34
	boolean  goto 49

state 25
	class:  CLASS TYPEID '(' var_formals ')' extends '{' feature_list '}'.    (4)

	.  reduce 4 (src line 83)


state 26
	feature_list:  feature_list feature.';' 

	';'  shift 53
	.  error


state 27
	feature:  '{'.block '}' 
	block: .    (22)

	VAR  shift 57
	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  reduce 22 (src line 227)

	block  goto 54
	block_nonempty  goto 55
	expr  goto 56
	primary  goto 36
	boolean  goto 49

state 28
	feature:  var.    (11)

	.  reduce 11 (src line 143)


state 29
	feature:  method.    (12)

	.  reduce 12 (src line 147)


state 30
	feature:  OVERRIDE.method 

	DEF  shift 32
	.  error

	method  goto 58

state 31
	var:  VAR.OBJECTID ':' TYPEID '=' expr 
	var:  VAR.OBJECTID '=' NATIVE 

	OBJECTID  shift 59
	.  error


state 32
	method:  DEF.OBJECTID '(' formals ')' ':' TYPEID '=' expr 
	method:  DEF.OBJECTID '(' formals ')' ':' TYPEID '=' NATIVE 

	OBJECTID  shift 60
	.  error


state 33
	extends:  EXTENDS TYPEID '(' actuals.')' 

	')'  shift 61
	.  error


state 34
	actuals:  actuals_nonempty.    (19)
	actuals_nonempty:  actuals_nonempty.',' expr 

	','  shift 62
	.  reduce 19 (src line 210)


state 35
	actuals_nonempty:  expr.    (20)
	expr:  expr.LE expr 
	expr:  expr.'<' expr 
	expr:  expr.EQ expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.MATCH '{' cases '}' 
	expr:  expr.'.' OBJECTID '(' actuals ')' 

	MATCH  shift 70
	LE  shift 63
	'<'  shift 64
	EQ  shift 65
	'+'  shift 68
	'-'  shift 69
	'*'  shift 66
	'/'  shift 67
	'.'  shift 71
	.  reduce 20 (src line 216)


state 36
	expr:  primary.    (37)

	.  reduce 37 (src line 324)


state 37
	expr:  OBJECTID.'=' expr 
	primary:  OBJECTID.'(' actuals ')' 
	primary:  OBJECTID.    (59)

	'('  shift 73
	'='  shift 72
	.  reduce 59 (src line 564)


state 38
	expr:  '!'.expr 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	expr  goto 74
	primary  goto 36
	boolean  goto 49

state 39
	expr:  '-'.expr 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	expr  goto 75
	primary  goto 36
	boolean  goto 49

state 40
	expr:  IF.'(' expr ')' expr ELSE expr 

	'('  shift 76
	.  error


state 41
	expr:  WHILE.'(' expr ')' expr 

	'('  shift 77
	.  error


state 42
	primary:  SUPER.'.' OBJECTID '(' actuals ')' 

	'.'  shift 78
	.  error


state 43
	primary:  NEW.TYPEID '(' actuals ')' 

	TYPEID  shift 79
	.  error


state 44
	primary:  '{'.block '}' 
	block: .    (22)

	VAR  shift 57
	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  reduce 22 (src line 227)

	block  goto 80
	block_nonempty  goto 55
	expr  goto 56
	primary  goto 36
	boolean  goto 49

state 45
	primary:  '('.expr ')' 
	primary:  '('.')' 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	')'  shift 82
	'{'  shift 44
	.  error

	expr  goto 81
	primary  goto 36
	boolean  goto 49

state 46
	primary:  NULL.    (57)

	.  reduce 57 (src line 552)


state 47
	primary:  INTEGER.    (60)

	.  reduce 60 (src line 570)


state 48
	primary:  STRING.    (61)

	.  reduce 61 (src line 576)


state 49
	primary:  boolean.    (62)

	.  reduce 62 (src line 582)


state 50
	primary:  THIS.    (63)

	.  reduce 63 (src line 588)


state 51
	boolean:  TRUE.    (64)

	.  reduce 64 (src line 596)


state 52
	boolean:  FALSE.    (65)

	.  reduce 65 (src line 604)


state 53
	feature_list:  feature_list feature ';'.    (9)

	.  reduce 9 (src line 130)


state 54
	feature:  '{' block.'}' 

	'}'  shift 83
	.  error


state 55
	block:  block_nonempty.    (23)

	.  reduce 23 (src line 234)


state 56
	block_nonempty:  expr.    (24)
	block_nonempty:  expr.';' block_nonempty 
	expr:  expr.LE expr 
	expr:  expr.'<' expr 
	expr:  expr.EQ expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.MATCH '{' cases '}' 
	expr:  expr.'.' OBJECTID '(' actuals ')' 

	MATCH  shift 70
	LE  shift 63
	'<'  shift 64
	EQ  shift 65
	'+'  shift 68
	'-'  shift 69
	'*'  shift 66
	'/'  shift 67
	'.'  shift 71
	';'  shift 84
	.  reduce 24 (src line 240)


state 57
	block_nonempty:  VAR.OBJECTID ':' TYPEID '=' expr ';' block_nonempty 

	OBJECTID  shift 85
	.  error


state 58
	feature:  OVERRIDE method.    (13)

	.  reduce 13 (src line 151)


state 59
	var:  VAR OBJECTID.':' TYPEID '=' expr 
	var:  VAR OBJECTID.'=' NATIVE 

	'='  shift 87
	':'  shift 86
	.  error


state 60
	method:  DEF OBJECTID.'(' formals ')' ':' TYPEID '=' expr 
	method:  DEF OBJECTID.'(' formals ')' ':' TYPEID '=' NATIVE 

	'('  shift 88
	.  error


state 61
	extends:  EXTENDS TYPEID '(' actuals ')'.    (6)

	.  reduce 6 (src line 106)


state 62
	actuals_nonempty:  actuals_nonempty ','.expr 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	expr  goto 89
	primary  goto 36
	boolean  goto 49

state 63
	expr:  expr LE.expr 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	expr  goto 90
	primary  goto 36
	boolean  goto 49

state 64
	expr:  expr '<'.expr 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	expr  goto 91
	primary  goto 36
	boolean  goto 49

state 65
	expr:  expr EQ.expr 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	expr  goto 92
	primary  goto 36
	boolean  goto 49

state 66
	expr:  expr '*'.expr 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	expr  goto 93
	primary  goto 36
	boolean  goto 49

state 67
	expr:  expr '/'.expr 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	expr  goto 94
	primary  goto 36
	boolean  goto 49

state 68
	expr:  expr '+'.expr 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	expr  goto 95
	primary  goto 36
	boolean  goto 49

state 69
	expr:  expr '-'.expr 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	expr  goto 96
	primary  goto 36
	boolean  goto 49

state 70
	expr:  expr MATCH.'{' cases '}' 

	'{'  shift 97
	.  error


state 71
	expr:  expr '.'.OBJECTID '(' actuals ')' 

	OBJECTID  shift 98
	.  error


state 72
	expr:  OBJECTID '='.expr 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	expr  goto 99
	primary  goto 36
	boolean  goto 49

state 73
	primary:  OBJECTID '('.actuals ')' 
	actuals: .    (18)

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  reduce 18 (src line 205)

	expr  goto 35
	primary  goto 36
	actuals  goto 100
	actuals_nonempty  goto 34
	boolean  goto 49

state 74
	expr:  '!' expr.    (39)
	expr:  expr.LE expr 
	expr:  expr.'<' expr 
	expr:  expr.EQ expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.MATCH '{' cases '}' 
	expr:  expr.'.' OBJECTID '(' actuals ')' 

	'.'  shift 71
	.  reduce 39 (src line 341)


state 75
	expr:  '-' expr.    (40)
	expr:  expr.LE expr 
	expr:  expr.'<' expr 
	expr:  expr.EQ expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.MATCH '{' cases '}' 
	expr:  expr.'.' OBJECTID '(' actuals ')' 

	'.'  shift 71
	.  reduce 40 (src line 352)


state 76
	expr:  IF '('.expr ')' expr ELSE expr 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	expr  goto 101
	primary  goto 36
	boolean  goto 49

state 77
	expr:  WHILE '('.expr ')' expr 

	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	expr  goto 102
	primary  goto 36
	boolean  goto 49

state 78
	primary:  SUPER '.'.OBJECTID '(' actuals ')' 

	OBJECTID  shift 103
	.  error


state 79
	primary:  NEW TYPEID.'(' actuals ')' 

	'('  shift 104
	.  error


state 80
	primary:  '{' block.'}' 

	'}'  shift 105
	.  error


state 81
	expr:  expr.LE expr 
	expr:  expr.'<' expr 
	expr:  expr.EQ expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.MATCH '{' cases '}' 
	expr:  expr.'.' OBJECTID '(' actuals ')' 
	primary:  '(' expr.')' 

	MATCH  shift 70
	LE  shift 63
	'<'  shift 64
	EQ  shift 65
	'+'  shift 68
	'-'  shift 69
	'*'  shift 66
	'/'  shift 67
	'.'  shift 71
	')'  shift 106
	.  error


state 82
	primary:  '(' ')'.    (58)

	.  reduce 58 (src line 558)


state 83
	feature:  '{' block '}'.    (10)

	.  reduce 10 (src line 136)


state 84
	block_nonempty:  expr ';'.block_nonempty 

	VAR  shift 57
	SUPER  shift 42
	NEW  shift 43
	NULL  shift 46
	THIS  shift 50
	TRUE  shift 51
	FALSE  shift 52
	'('  shift 45
	OBJECTID  shift 37
	INTEGER  shift 47
	STRING  shift 48
	IF  shift 40
	WHILE  shift 41
	'-'  shift 39
	'!'  shift 38
	'{'  shift 44
	.  error

	block_nonempty  goto 107
	expr  goto 56
	primary  goto 36
	boolean  goto 49

state 85
	block_nonempty:  VAR OBJECTID.':' TYPEID '=' expr ';' block_nonempty 

	':'  shift 108
	.  error


state 86
	var:  VAR OBJECTID ':'.TYPEID '=' expr 

	TYPEID  shift 109
	.  error


state 87
	var:  VAR OBJECTID '='.NATIVE 

	NATIVE  shift 110
	.  error


state 88
	method:  DEF OBJECTID '('.formals ')' ':' TYPEID '=' expr 
	method:  DEF OBJECTID '('.formals ')' ':' TYPEID '=' NATIVE 
	formals: .    (32)

	OBJECTID  shift 14
	.  reduce 32 (src line 292)

	formals  goto 111
	formals_nonempty  goto 112
	formal  goto 113

state 89
	actuals_nonempty:  actuals_nonempty ',' expr.    (21)
	expr:  expr.LE expr 
	expr:  expr.'<' expr 
	expr:  expr.EQ expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.MATCH '{' cases '}' 
	expr:  expr.'.' OBJECTID '(' actuals ')' 

	MATCH  shift 70
	LE  shift 63
	'<'  shift 64
	EQ  shift 65
	'+'  shift 68
	'-'  shift 69
	'*'  shift 66
	'/'  shift 67
	'.'  shift 71
	.  reduce 21 (src line 221)


state 90
	expr:  expr.LE expr 
	expr:  expr LE expr.    (43)
	expr:  expr.'<' expr 
	expr:  expr.EQ expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.MATCH '{' cases '}' 
	expr:  expr.'.' OBJECTID '(' actuals ')' 

	EQ  shift 65
	'+'  shift 68
	'-'  shift 69
	'*'  shift 66
	'/'  shift 67
	'.'  shift 71
	.  reduce 43 (src line 392)


state 91
	expr:  expr.LE expr 
	expr:  expr.'<' expr 
	expr:  expr '<' expr.    (44)
	expr:  expr.EQ expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.MATCH '{' cases '}' 
	expr:  expr.'.' OBJECTID '(' actuals ')' 

	EQ  shift 65
	'+'  shift 68
	'-'  shift 69
	'*'  shift 66
	'/'  shift 67
	'.'  shift 71
	.  reduce 44 (src line 409)


state 92
	expr:  expr.LE expr 
	expr:  expr.'<' expr 
	expr:  expr.EQ expr 
	expr:  expr EQ expr.    (45)
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.MATCH '{' cases '}' 
	expr:  expr.'.' OBJECTID '(' actuals ')' 

	'+'  shift 68
	'-'  shift 69
	'*'  shift 66
	'/'  shift 67
	'.'  shift 71
	.  reduce 45 (src line 426)


state 93
	expr:  expr.LE expr 
	expr:  expr.'<' expr 
	expr:  expr.EQ expr 
	expr:  expr.'*' expr 
	expr:  expr '*' expr.    (46)
	expr:  expr.'/' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.MATCH '{' cases '}' 
	expr:  expr.'.' OBJECTID '(' actuals ')' 

	'.'  shift 71
	.  reduce 46 (src line 439)


state 94
	expr:  expr.LE expr 
	expr:  expr.'<' expr 
	expr:  expr.EQ expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr '/' expr.    (47)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.MATCH '{' cases '}' 
	expr:  expr.'.' OBJECTID '(' actuals ')' 

	'.'  shift 71
	.  reduce 47 (src line 452)

